infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port: 
                  number: 8080
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port: 
                  number: 8081
          - path: /queryposts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port: 
                  number: 8082
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3000
